--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,9 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.security.user.name=admin
+spring.security.user.password=admin123
+server.port=8080
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
