--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
 			<scope>runtime</scope>
 			<version>42.7.4</version>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 
 		<!-- Lombok -->
 		<dependency>
@@ -104,6 +109,7 @@
 				<configuration>
 					<source>21</source>
 					<target>21</target>
+
 				</configuration>
 			</plugin>
 		</plugins>
