--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=JobEasy
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://dpg-ctks483qf0us7384iac0-a.frankfurt-postgres.render.com:5432/jobeasy
+spring.datasource.username=jobeasy_user
+spring.datasource.password=ENVxVSox7PCjub9aMLfn1qzScXvi7dE6
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 
 # JPA and Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -12,6 +13,13 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.security.user.name=admin
 spring.security.user.password=admin123
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 server.port=8080
 
 spring.servlet.multipart.enabled=true
