JobEasy Spring Boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:postgresql://dpg-ctks483qf0us7384iac0-a.frankfurt-pos
 spring.datasource.username=jobeasy_user
 spring.datasource.password=ENVxVSox7PCjub9aMLfn1qzScXvi7dE6
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.web.resources.static-locations=classpath:/static/
 
 
 
