JobEasy Spring Boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,6 @@ spring.datasource.password=ENVxVSox7PCjub9aMLfn1qzScXvi7dE6
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.web.resources.static-locations=classpath:/static/
 
-
-
-
-
 # JPA and Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -17,15 +13,20 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.security.user.name=admin
 spring.security.user.password=admin123
-
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=password
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
 server.port=8080
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=jobeasyinfo@gmail.com
+spring.mail.password=vtfv buad epdn oaef
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+
+
