JobEasy Spring Boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=JobEasy
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://dpg-ctks483qf0us7384iac0-a.frankfurt-postgres.render.com:5432/jobeasy
-spring.datasource.username=jobeasy_user
-spring.datasource.password=ENVxVSox7PCjub9aMLfn1qzScXvi7dE6
+spring.datasource.url=jdbc:postgresql://dpg-cub3b256l47c739ucqk0-a.frankfurt-postgres.render.com:5432/postgresdb_ah0b
+spring.datasource.username=postgresdb_ah0b_user
+spring.datasource.password=X8tcHliEYPdNJ6XTwH3rvanPSiyM2jfY
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.web.resources.static-locations=classpath:/static/
 
