JobEasy Spring Boot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.servlet.multipart.max-request-size=10MB
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=jobeasyinfo@gmail.com
-spring.mail.password=bfwr hohj myrk ofry
+spring.mail.password=zayv jsyg tbtw wjej
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
