JobEasy Spring Boot - Dodavanje email notifikacije za uspjesno zakazivanje intervjua

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=JobEasy
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://dpg-cub3b256l47c739ucqk0-a.frankfurt-postgres.render.com:5432/postgresdb_ah0b
-spring.datasource.username=postgresdb_ah0b_user
-spring.datasource.password=X8tcHliEYPdNJ6XTwH3rvanPSiyM2jfY
+spring.datasource.url=jdbc:postgresql://dpg-cv2voh8gph6c73clogt0-a.frankfurt-postgres.render.com:5432/postgres2_envm
+spring.datasource.username=postgres2_envm_user
+spring.datasource.password=7oYYOGszx5uZzjVAximlERhXODLrfqeY
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.web.resources.static-locations=classpath:/static/
 
